- Replace some Plib function - Restore FG mode
Now the proof-of-concept is here and working:
- positions.txt has been built with recent x-plane data (May 2013)
- gen_phonebooks.pl has been improved in order to provide following features :
  - 25KHz precision are now usable (before: 118.170 / after: 118.175)
  - ATC can record a message (ATIS message) on Asterisk server
  - Pilot can listen the ATIS message when frequency is selected
  - 123.450MHz is now usable

For testing you need to run:
./fgcom -Sclemaez.dyndns.org -p16661 for FG mode
./fgcom Sclemaez.dyndns.org -aICAO -fxxx.xxx  for ATC mode ( xxx.xxx must be an ATIS frequency )

--- a/utils/fgcom/CMakeLists.txt
+++ b/utils/fgcom/CMakeLists.txt
@@ -586,7 +586,9 @@ target_link_libraries( fgcom iaxclient_lib )
 target_link_Libraries( fgcom
     ${win_LIBS}
     ${PLIB_LIBRARIES}
-    ${ZLIB_LIBRARIES} )
+    ${ZLIB_LIBRARIES}
+    ${SIMGEAR_CORE_LIBRARIES}
+    ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES} )
 
 if(AUDIO_OPENAL)
 target_link_Libraries( fgcom
