Compiling fgcom in the flightgear space

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -32,8 +32,8 @@ if(ENABLE_TERRASYNC)
 endif()
 
 if(ENABLE_IAX)
-#    add_subdirectory(fgcom)
-    add_subdirectory(iaxclient)
+    add_subdirectory(fgcom)
+#    add_subdirectory(iaxclient)
     message(STATUS "IAXClient: ENABLED")
 else()
     message(STATUS "IAXClient: DISABLED")
