--- a/utils/fgcom/iaxclient/lib/libiax2/configure.in
+++ b/utils/fgcom/iaxclient/lib/libiax2/configure.in
@@ -15,11 +15,12 @@ dnl None available
 dnl Check header files
 AC_HEADER_STDC
 
+AC_CHECK_FUNCS(gettimeofday)
+
 AC_SUBST(LIBS)
 
 AC_ARG_ENABLE(snomhack,     [  --enable-snomhack       Use slower memset for SNOM phoneem ],,enable_snomhack=no)
 AC_ARG_ENABLE(extreme_debug,     [  --enable-extreme-debug  Compile with extreme debugging code enabled ],,enable_extreme_debug=no)
-AC_ARG_ENABLE(newjb,     [  --enable-newjb       Use new jitter buffer  ], [CFLAGS="$CFLAGS -DNEWJB"])
 if test "$enable_snomhack" = yes ; then
 	AC_DEFINE(SNOM_HACK)
 fi
