Fix shared library linkage

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -92,7 +92,7 @@ if(ENABLE_JSBSIM)
     target_link_libraries(fgfs JSBSim)
 endif()
 if(ENABLE_IAX)
-    target_link_libraries(fgfs iaxclient_lib)
+    target_link_libraries(fgfs iaxclient_lib ${OPENAL_LIBRARY})
 endif()
 if(FG_HAVE_GPERFTOOLS)
     include_directories(${GooglePerfTools_INCLUDE_DIR})
