--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -32,9 +32,7 @@ if(ENABLE_TERRASYNC)
 endif()
 
 if(ENABLE_IAX)
-    add_subdirectory(fgcom)
+    add_subdirectory(iaxclient/lib)
 #    add_subdirectory(iaxclient)
     message(STATUS "IAXClient: ENABLED")
-else()
-    message(STATUS "IAXClient: DISABLED")
 endif()
