Restore ENABLE_IAX

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -3,4 +3,6 @@ if (NOT SYSTEM_SQLITE)
     add_subdirectory(sqlite3)
 endif()
 
-add_subdirectory(iaxclient/lib)
+if (ENABLE_IAX)
+    add_subdirectory(iaxclient/lib)
+endif()
