Fix ricer sqlite3 build
-fno-fast-math needs to be explicitly passed not to trigger #error
preprocessor directive.

--- a/3rdparty/sqlite3/CMakeLists.txt
+++ b/3rdparty/sqlite3/CMakeLists.txt
@@ -2,3 +2,4 @@
 add_definitions(-DSQLITE_OMIT_LOAD_EXTENSION)
 add_definitions(-DNDEBUG)
 add_library(fgsqlite3 sqlite3.c)
+set_target_properties(fgsqlite3 PROPERTIES COMPILE_FLAGS "-fno-fast-math")
