Add support for IGC logging protocol. Many light aircraft include GPS loggers capable of recording the flight path using IGC records. Lots of third party utilities are available to analyze, process and convert igc files. Usage: "fgfs --igc=file,out,1,OutputFile.igc"

--- a/src/Network/CMakeLists.txt
+++ b/src/Network/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SOURCES
 	generic.cxx
 	httpd.cxx
 	HTTPClient.cxx
+	igc.cxx
 	joyclient.cxx
 	jsclient.cxx
 	lfsglass.cxx
@@ -40,6 +41,7 @@ set(HEADERS
 	generic.hxx
 	httpd.hxx
 	HTTPClient.hxx
+	igc.hxx
 	joyclient.hxx
 	jsclient.hxx
 	lfsglass.hxx
