Make build information readonly and clean up debug output.

--- a/src/Include/config_cmake.h.in
+++ b/src/Include/config_cmake.h.in
@@ -32,8 +32,9 @@
 #define PKGLIBDIR "@FG_DATA_DIR@"
 #define WEB_BROWSER "@WEB_BROWSER@"
 
-#cmakedefine FG_HAVE_HLA
-#cmakedefine FG_HAVE_GPERFTOOLS
+// Ensure FG_HAVE_xxx always have a value
+#define FG_HAVE_HLA (@FG_HAVE_HLA@ + 0)
+#define FG_HAVE_GPERFTOOLS (@FG_HAVE_GPERFTOOLS@ + 0)
 #cmakedefine FG_JPEG_SERVER
 
 #cmakedefine SYSTEM_SQLITE
