Refactor aircraft-dir visiting.
Cap maximum depth to avoid bug 865

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -36,6 +36,7 @@ set(HEADERS
 	util.hxx
     positioninit.hxx
     subsystemFactory.hxx
+    AircraftDirVisitorBase.hxx
 	)
 
 get_property(FG_SOURCES GLOBAL PROPERTY FG_SOURCES)
