--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -109,6 +109,7 @@ target_link_libraries(fgfs
 	${JPEG_LIBRARY}
 	${HLA_LIBRARIES}
 	${EVENT_INPUT_LIBRARIES}
+	${CRASHRPT_LIBRARY}
 	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 	${SIMGEAR_SCENE_LIBRARY_DEPENDENCIES}
 	${PLATFORM_LIBS}
