Windows native file-dialog, menu-bar
By Gijs with additions by James. Menubar is disabled at present
since it's not usable and potentially inferior to other solutions,
but committing the code so it doesn't rot.

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -46,10 +46,12 @@ set(HEADERS
 	)
 
 if(WIN32)
-	message(STATUS "on Windows")
-
-	list(APPEND HEADERS WindowsMouseCursor.hxx)
-	list(APPEND SOURCES WindowsMouseCursor.cxx)
+	list(APPEND HEADERS WindowsMouseCursor.hxx
+						FGWindowsMenuBar.hxx
+						WindowsFileDialog.hxx)
+	list(APPEND SOURCES WindowsMouseCursor.cxx
+						FGWindowsMenuBar.cxx
+						WindowsFileDialog.cxx)
 endif()
 		
 if (APPLE)
