--- a/src/Include/config_cmake.h.in
+++ b/src/Include/config_cmake.h.in
@@ -2,6 +2,7 @@
 
 #cmakedefine FG_NDEBUG
 #cmakedefine ENABLE_SP_FDM
+#cmakedefine JSBSIM_USE_GROUNDREACTIONS
 
 // JSBSim needs this, to switch from standalone to in-FG mode
 #define FGFS
